Ensure edit mode displays over rows if it gets too big

--- a/src/theme/edit.scss
+++ b/src/theme/edit.scss
@@ -72,6 +72,11 @@
       left: auto;
     }
   }
+  .block.cardCarousel, .block.contentBlockGrid, .block.__grid {
+    & .renderer-wrapper > div {
+      height: 100%;
+    }
+  }
 }
 
 // Columns block editing fixes
